[gd_scene load_steps=3 format=3 uid="uid://bukpfefbhtj80"]

[ext_resource type="Script" uid="uid://qrc7lt37mtov" path="res://Scenes/Meniuri/main_menu.gd" id="1_5o00i"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_dxnes"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1149.0
offset_bottom = 648.0
script = ExtResource("1_5o00i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -121.5
offset_right = 252.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.122154035, 0.27960297, 0.4249543, 0)
theme_override_colors/font_outline_color = Color(0.40862808, 0.28265148, 0.8516741, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxLine_dxnes")
text = "The Odyssey"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Level 1"

[node name="Level2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Level 2"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Quit"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Reset Progress"
